# robotika-2024

./: .gitignore  README.md  build_static.sh  clear_pico.py  config.json  infotabor_bevasarlo_lista_2024.txt  map.excalidraw  plot_colors.py  plot_data.py  robo-calc.py
.github/workflows/: pages.yml
code/: buzzer.py  config.py  dbg_magic.py  debug.py  h_bridge.py  main.py  networking.py  pid.py  rgb_led.py  rgb_sensor.py  sensor_thread.py  sernsor_thread.py  servo.py  ultra_sensor.py  utils.py
datasheets/: _index.html
debugserver/: .gitignore  Cargo.toml  deps.sh  deps.txt  index.js  package.json  pnpm-lock.yaml  tailwind.config.js  test.py  test2.py  tw.sh
debugserver/src/: debug.rs  http.rs  main.rs  message.rs  templates.rs
debugserver/templates/: controls.html  index.html
lessons/: 01.html  01.md  02.html  02.md  03.html  03.md  04.html  04.md  05.md  06.md  07.md  08.md  09.md  index.html  overview.md
lessons/res/04/: pullup.kicad_sch
test/: main.py
